Fix quick-jump close button positioning

--- a/app/styles/views/_quick-jump.scss
+++ b/app/styles/views/_quick-jump.scss
@@ -95,6 +95,8 @@
 
       background-color: transparent;
       border-width: 0;
+      margin-bottom: 0;
+      min-height: $actions-button-size;
     }
 
     .change-app {
